<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:coolding="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/top_bar_color">

        <TextView
            android:id="@+id/home_title_view"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/app_name"
            android:layout_marginLeft="17dp"
            android:textColor="@color/top_title_color"
            android:textSize="@dimen/top_title_size" />


    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/home_view_pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/home_line_color"></View>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/white_color"
        android:orientation="horizontal"
        android:paddingTop="3dp">

        <com.ccaaii.base.utils.widgets.HomeBottomButton
            android:id="@+id/home_bottom_button_home"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            coolding:home_bottom_button_icon="@drawable/icon_bottom_home"
            coolding:home_bottom_button_text="@string/bottom_home" />

        <com.ccaaii.base.utils.widgets.HomeBottomButton
            android:id="@+id/home_bottom_button_discovery"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            coolding:home_bottom_button_icon="@drawable/icon_bottom_discovery"
            coolding:home_bottom_button_text="@string/bottom_discovery" />

        <com.ccaaii.base.utils.widgets.HomeBottomButton
            android:id="@+id/home_bottom_button_setting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            coolding:home_bottom_button_icon="@drawable/icon_bottom_my"
            coolding:home_bottom_button_text="@string/bottom_setting" />
    </LinearLayout>
</LinearLayout>