<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/top_bar_color">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/top_bar_height"
            android:layout_height="@dimen/top_bar_height"
            android:background="@null"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_suggestion"
            android:textColor="@color/top_title_color"
            android:textSize="@dimen/top_title_size" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/hint_reply"
        android:textColor="@color/home_text_deep_color"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/reply_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/bg_suggestion_input"
        android:focusable="true"
        android:gravity="top"
        android:imeOptions="flagNoEnterAction"
        android:lines="7"
        android:maxLength="500"
        android:padding="7dp"
        android:textSize="14sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/hint_reply_info"
        android:textColor="@color/home_text_deep_color"
        android:textSize="14sp" />
    
    <EditText
        android:id="@+id/reply_contacts"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/bg_suggestion_input"
        android:gravity="center_vertical"
        android:imeOptions="flagNoEnterAction"
        android:paddingLeft="7dp"
        android:singleLine="true"
        android:textSize="14sp" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/bg_info_bottom_blue_button"
        android:gravity="center"
        android:text="@string/dialog_submit"
        android:textColor="@color/white_color"
        android:textSize="14sp" />
    
</LinearLayout>