<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/top_bar_color">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/top_bar_height"
            android:layout_height="@dimen/top_bar_height"
            android:background="@null"
            android:padding="7dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_about"
            android:textColor="@color/top_title_color"
            android:textSize="@dimen/top_title_size" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:padding="7dp"
                android:scaleType="centerInside"
                android:src="@drawable/app_icon_big" />

            <TextView
                android:id="@+id/version_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="V1.0.0"
                android:textColor="@color/home_text_deep_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/login_text"
                android:textColor="@color/home_text_light_color"
                android:textSize="12sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="17dp"
                android:background="@color/home_line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/about_update_view"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="@string/check_for_updates"
                        android:textColor="@color/home_text_deep_color"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_arrow_right_gray" />
                </LinearLayout>

                <View
                    android:id="@+id/middle_line_view"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:background="@color/home_line_color" />

                <LinearLayout
                    android:id="@+id/about_user_agreement_view"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="17dp"
                    android:paddingRight="17dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="@string/title_user_agreement"
                        android:textColor="@color/home_text_deep_color"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon_arrow_right_gray" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/home_line_color" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="17dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/company_name"
                    android:textColor="@color/home_text_high_light_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/about_content_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/app_description"
                    android:textColor="@color/home_text_high_light_color"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textColor="@color/home_text_high_light_color"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>